@@ -17,12 +17,15 @@ dependencies {
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-    testImplementation 'org.mockito:mockito-core:3.6.28'
-    testImplementation 'org.mockito:mockito-junit-jupiter:3.6.28'
+    //testImplementation 'org.mockito:mockito-core:3.6.28'
+    testImplementation 'org.mockito:mockito-inline:5.2.0'
+    testImplementation 'net.bytebuddy:byte-buddy:1.14.17'
+    //testImplementation 'org.mockito:mockito-junit-jupiter:3.6.28'
 }
 
 test {
     useJUnitPlatform()
+    jvmArgs '-Dnet.bytebuddy.experimental=true'
 }
 
 tasks.register('copyJarToRoot', Copy) {
